--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
   </head>
 
   <body>
+    <p class="text-green-600"><%= notice %></p>
+    <p class="text-red-600"><%= alert %></p>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
