--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,2 +1,12 @@
-<!-- app/views/password_resets/edit.html.erb -->
-<h1>Update password</h1>
+<h1>新しいパスワードを設定</h1>
+<%= form_with model: @user, url: password_reset_path(params[:id]), method: :patch, local: true do |f| %>
+  <div>
+    <%= f.label :password, '新しいパスワード' %>
+    <%= f.password_field :password, required: true, minlength: 6 %>
+  </div>
+  <div>
+    <%= f.label :password_confirmation, 'パスワード（確認）' %>
+    <%= f.password_field :password_confirmation, required: true, minlength: 6 %>
+  </div>
+  <%= f.submit '更新する' %>
+<% end %>
