--- a/app/views/pre_codes/edit.html.erb
+++ b/app/views/pre_codes/edit.html.erb
@@ -1,2 +1,3 @@
-<h1 class="mb-4 text-2xl font-bold">PreCode を編集</h1>
-<%= render "form" %>
+<% content_for :title, "PreCode編集" %>
+<h1 class="text-xl font-semibold mb-4"><%= yield :title %></h1>
+<%= render "form", pre_code: @pre_code %>
