--- a/app/views/admin/books/new.html.erb
+++ b/app/views/admin/books/new.html.erb
@@ -1,4 +1,3 @@
-<div>
-  <h1 class="font-bold text-4xl">Admin::Books#new</h1>
-  <p>Find me in app/views/admin/books/new.html.erb</p>
-</div>
+<% content_for :title, "Books / 新規作成" %>
+<h1 class="text-xl font-semibold mb-4">Book を新規作成</h1>
+<%= render "form", book: @book %>
