--- a/app/views/admin/book_sections/new.html.erb
+++ b/app/views/admin/book_sections/new.html.erb
@@ -1,4 +1,2 @@
-<div>
-  <h1 class="font-bold text-4xl">Admin::BookSections#new</h1>
-  <p>Find me in app/views/admin/book_sections/new.html.erb</p>
-</div>
+<h1 class="text-2xl font-semibold mb-4">Section作成</h1>
+<%= render "form" %>
