--- a/app/views/book_sections/show.html.erb
+++ b/app/views/book_sections/show.html.erb
@@ -6,7 +6,7 @@
   <%= @section.position %>. <%= @section.heading %>
 </h1>
 
-<article class="prose prose-slate max-w-none">
+<article class="content-body max-w-none">
   <%= render_section_content(@section) %>
 </article>
 
