--- a/app/views/admin/books/index.html.erb
+++ b/app/views/admin/books/index.html.erb
@@ -1,3 +1,6 @@
+<% breadcrumb :admin_books %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "Books" %>
 <div class="flex items-center justify-between mb-4">
   <h1 class="text-2xl font-semibold">Books</h1>
