--- a/app/views/code_libraries/index.html.erb
+++ b/app/views/code_libraries/index.html.erb
@@ -1,4 +1,7 @@
 <!-- app/views/code_libraries/index.html.erb -->
+<% breadcrumb :code_libraries %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "コードライブラリ" %>
 
 <div class="mb-4 space-y-3">
