--- a/app/views/pre_codes/edit.html.erb
+++ b/app/views/pre_codes/edit.html.erb
@@ -1,3 +1,8 @@
+<% breadcrumb :root %>
+<% breadcrumb :pre_codes %>
+<% breadcrumb :pre_code_edit, @pre_code %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "PreCode編集" %>
 <h1 class="text-xl font-semibold mb-4"><%= yield :title %></h1>
 <%= render "form", pre_code: @pre_code %>
