--- a/app/views/pre_codes/index.html.erb
+++ b/app/views/pre_codes/index.html.erb
@@ -1,4 +1,6 @@
 <%# app/views/pre_codes/index.html.erb %>
+<% breadcrumb :pre_codes %>
+<%= render "shared/breadcrumbs" %>
 
 <% content_for :title, "My PreCodes" %>
 
