--- a/app/views/admin/book_sections/index.html.erb
+++ b/app/views/admin/book_sections/index.html.erb
@@ -1,3 +1,6 @@
+<% breadcrumb :admin_book_sections %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-2xl font-semibold mb-4">Sections</h1>
 <div class="mb-4">
   <%= link_to "新規作成", new_admin_book_section_path, class: "px-3 py-2 rounded bg-slate-900 text-white" %>
