--- a/app/views/admin/book_sections/new.html.erb
+++ b/app/views/admin/book_sections/new.html.erb
@@ -1,2 +1,5 @@
+<% breadcrumb :admin_book_sections %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-2xl font-semibold mb-4">Section作成</h1>
 <%= render "form" %>
