--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,3 +1,6 @@
+<% breadcrumb :admin_root %>
+<%= render "shared/breadcrumbs" %>
+
 <% content_for :title, "Dashboard" %>
 <h1 class="text-2xl font-semibold mb-4">Dashboard</h1>
 
