--- a/app/views/code_libraries/show.html.erb
+++ b/app/views/code_libraries/show.html.erb
@@ -1,4 +1,8 @@
 <!-- app/views/code_libraries/show.html.erb -->
+<% breadcrumb :code_libraries %>
+<% breadcrumb :code_library, @pre_code %>
+<%= render "shared/breadcrumbs" %>
+
 <h1 class="text-xl font-semibold mb-2"><%= @pre_code.title %></h1>
 <p class="text-slate-600 mb-6"><%= simple_format @pre_code.description %></p>
 
