--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,4 +30,13 @@
       <%= yield %>
     </main>
   </body>
+
+  <footer class="mt-12 py-8 text-sm text-slate-500">
+    <div class="mx-auto max-w-md px-4 flex flex-wrap gap-4">
+      <%= link_to "利用規約", terms_path, class: "hover:underline" %>
+      <%= link_to "プライバシー", privacy_path, class: "hover:underline" %>
+      <%= link_to "ヘルプ", help_path, class: "hover:underline" %>
+      <%= link_to "お問い合わせ", contact_path, class: "hover:underline" %>
+    </div>
+  </footer>
 </html>
