fix：各機能のデザイン・UIを修正 / バグや機能の追加も実装

--- a/app/views/admin/book_sections/new.html.erb
+++ b/app/views/admin/book_sections/new.html.erb
@@ -1,4 +1,4 @@
-<% breadcrumb :admin_book_sections %>
+<% breadcrumb :admin_book_section_new %>
 <%= render "shared/breadcrumbs" %>
 
 <h1 class="text-2xl font-semibold mb-4">Section作成</h1>
