--- a/app/views/admin/books/new.html.erb
+++ b/app/views/admin/books/new.html.erb
@@ -1,4 +1,4 @@
-<% breadcrumb :admin_books %>
+<% breadcrumb :admin_book_new %>
 <%= render "shared/breadcrumbs" %>
 
 <% content_for :title, "Books / 新規作成" %>
