--- a/app/views/pre_codes/edit.html.erb
+++ b/app/views/pre_codes/edit.html.erb
@@ -1,5 +1,6 @@
 <% breadcrumb :root %>
 <% breadcrumb :pre_codes %>
+<% breadcrumb :pre_code, @pre_code %>
 <% breadcrumb :pre_code_edit, @pre_code %>
 <%= render "shared/breadcrumbs" %>
 
