--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <!-- CSS / JS (Importmap) -->
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
     <!-- Quill CDN (管理画面でのみ読み込む) -->
